test/syntaxError/errorRecursive.calc
(if (+ 5 (if 1 1)) 85 (+ 8 5))